@@ -1,3 +1,15 @@
+Fri Feb  6 17:19:23 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/{dir.h, win32.c} (rb_w32_readdir_with_enc): new function to
+	  read entry with specified enc.
+
+	* win32/win32.c (readdir_internal): extract from rb_w32_opendir().
+
+	* win32/win32.c (opendir_internal): extract from rb_w32_readdir().
+
+	* dir.c (dir_read, dir_each): use new READDIR macro instead of readdir()
+	  to pass enc for special version of readdir, such as above.
+
 Fri Feb  6 12:11:24 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ruby.c (process_options): set initial default_external before -r.
